--- a/bin/README
+++ b/bin/README
@@ -1,3 +1,4 @@
 Scripts used along the way.
 
-Might as well keep them around. You never know when they'll come in handy again.
+Might as well keep them around.
+You never know when they'll come in handy again.
